# ugc-scrapper

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  create-db.py  crontab  docker-compose.yml  main.py
migrations/: 20250412162235_init.down.sql  20250412162235_init.up.sql  20250423184049_create_poll_table.down.sql  20250423184049_create_poll_table.up.sql
migrations/01-init/: down.sql  up.sql
src/: api.rs  database.rs  domain.rs  errors.rs  features.rs  http_agent.rs  jobs.rs  lib.rs  migrations.rs  repository.rs  scrapper.rs  services.rs  utils.rs
src/api/: dto.rs  errors.rs  handlers.rs  ugc_movies.rs
src/database/: domain.rs  init_db.rs  migrations.rs  models.rs  movie.rs  poll.rs  repositories.rs  repository.rs
src/database/repositories/: answer.rs  movie.rs  poll.rs
src/features/: discord.rs  scrapper.rs
src/features/discord/: constants.rs  poll_domain.rs  select_day.rs  select_movies.rs  services.rs  use_cases.rs
src/features/discord/services/: poll.rs
src/features/discord/use_cases/: movies_use_cases.rs  poll_api_use_case.rs
src/features/scrapper/: scrapper.rs  scrapper_domain.rs  services.rs
src/features/scrapper/services/: html_parser.rs  ugc.rs
src/features/scrapper/utils/: dates.rs
src/jobs/: scrap_ugc_movies_task.rs
src/migrations/01-init/: down.sql  up.sql
src/services/: discord.rs  ugc.rs
src/utils/: dates.rs  scheduler.rs  theaters.rs
