[package]
name = "ugc-scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
rusqlite = "0.32.1"
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
async-sqlite = { version = "*", default-features = false }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
const_format="*"
uuid = {version = "1.13.1", features = ["v4", "serde"]}
