[package]
name = "ugc-scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = {version = "1.13.1", features = ["v4", "serde"]}
reqwest = { version = "0.12.15", features = ["json"] }
scraper = "0.23.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "migrate", "json", "macros", "bigdecimal" ] }
anyhow = "1.0.97"
thiserror = "2.0.12"
serde_with = { version = "3.12.0", features = ["time_0_3"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.140"